# belajar-actix

./: .env  .env.example  Cargo.toml
src/: auth.rs  db.rs  main.rs  tests.rs
src/database/: mod.rs
src/handlers/: admin.rs  auth.rs  content.rs  mod.rs
src/middleware/: auth.rs  limiter.rs  logger.rs  mod.rs
src/models/: auth.rs  content.rs  mod.rs  user.rs
src/routes/: admin.rs  auth.rs  content.rs  mod.rs
src/services/: mod.rs  redis.rs  video.rs
static/: admin.html
