[package]
name = "belajar-actix"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-files = "0.6"
actix-multipart = "0.6"
actix-cors = "0.7"
sqlx = { version = "0.7", features = ["sqlite", "postgres", "runtime-tokio-rustls", "macros", "chrono", "uuid", "any"] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["serde", "v4"] }
jsonwebtoken = "9"
bcrypt = "0.15"
sys-info = "0.9"
futures = "0.3"
rand = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
env_logger = "0.11"
sanitize-filename = "0.6"
redis = { version = "0.32", features = ["tokio-comp"] }
tracing-appender = "0.2"
actix-extensible-rate-limit = { version = "0.4", features = ["dashmap"] }
